# tnn-mobile

./: .gitignore  README.md
tnn/: version.h
zoo/clothes_seg/: CMakeLists.txt  README.md
zoo/clothes_seg/include/: AccessoryDetect.h
zoo/clothes_seg/src/: AccessoryDetect.cc
zoo/kannarotate/: CMakeLists.txt  README.md  yuv420sp_to_rgb_fast_asm.h
zoo/portrait_seg/: CMakeLists.txt  README.md
zoo/portrait_seg/include/: BodyDetect.h  FaceDetect.h  HeadDetect.h  HumanDetect.h
zoo/portrait_seg/src/: BodyDetect.cc  FaceDetect.cc  HeadDetect.cc  HumanDetect.cc
zoo/tnn_helper/: CMakeLists.txt  README.md
zoo/tnn_helper/include/: tnn_sdk_sample.h
zoo/tnn_helper/src/: tnn_sdk_sample.cc
